--- a/Algorithm-1.ipynb
+++ b/Algorithm-1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4697de10",
+   "id": "6d56f365",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f82cb141",
+   "id": "28078712",
    "metadata": {},
    "source": [
     "# Processing the data\n",
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b5d1ac69",
+   "execution_count": 125,
+   "id": "5653c907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4c1da461",
+   "execution_count": 126,
+   "id": "fdc7f671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "37bbd5a4",
+   "execution_count": 127,
+   "id": "b31984a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "837268ea",
+   "execution_count": 128,
+   "id": "05af7d80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "875a6ed9",
+   "execution_count": 129,
+   "id": "23b73575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,17 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "741bacaf",
+   "execution_count": 130,
+   "id": "d8ecfd2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tempData=spDaily[:1]"
+    "tempData=spDaily[:10]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "df490275",
+   "id": "b1b81cd4",
    "metadata": {},
    "source": [
     "# Creating the Algorithim"
@@ -100,8 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "76e226bf",
+   "execution_count": 131,
+   "id": "cd6dda11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,25 +110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7bdbcb36",
+   "execution_count": 132,
+   "id": "7fcd80d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Algo(data,r, a_L, a_S, E_e, stopProf, stopLoss):\n",
+    "def Algo(params):\n",
+    "    data = trainData\n",
+    "    r, a_L, a_S, E_e, stopProf, stopLoss = params\n",
     "    trader = Trader()\n",
-    "    \n",
     "    #for each day in the data\n",
     "    for d in range(len(data)):\n",
     "        #for each time stamp in the day\n",
     "        index = 1\n",
-    "        print(\"Day\",d)\n",
+    "        \n",
     "        for t in range(data[d].index[2] , data[d].index[len(data[d])-1]):\n",
     "            index = index + 1\n",
     "            \n",
     "            #close out because market is closing                \n",
     "            ti = tickData.loc[t,\"Time2\"].hour*100 + tickData.loc[t,\"Time2\"].minute\n",
-    "            if (1513<ti<1520 or 2354<ti<2359):\n",
+    "            if (1513<ti<1520 or 2330<ti<2359):\n",
     "                if trader.getLastTradePos() != 0:\n",
     "                    trader.closeOut(data[d].iloc[index,:])\n",
     "                continue\n",
@@ -138,12 +139,12 @@
     "\n",
     "            \n",
     "            #if the acceleration is greater than or equal to acceleration constant Long\n",
-    "            if (algoTools.getAccel(t) >= a_L or algoTools.getRate(t) <= r) and trader.getLastTradePos() == 0:\n",
+    "            if (algoTools.getAccel(t) >= a_L or algoTools.getRate(t) >= r) and trader.getLastTradePos() == 0:\n",
     "                trader.goLong(data[d].iloc[index,:])\n",
     "                continue\n",
     "            \n",
     "            #same as previous statment but for shorting\n",
-    "            if  ( algoTools.getAccel(t) <= a_S or algoTools.getRate(t) <= r ) and trader.getLastTradePos() == 0:\n",
+    "            if  ( algoTools.getAccel(t) <= a_S or algoTools.getRate(t) <= -r ) and trader.getLastTradePos() == 0:\n",
     "                trader.goShort(data[d].iloc[index,:])\n",
     "                continue\n",
     "            \n",
@@ -181,59 +182,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "1995e438",
+   "execution_count": 133,
+   "id": "4d645634",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Day 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "trader = Algo(tempData,0.3, 0.6, -0.5, 0.03 ,0.5, -0.05)"
+    "trader = Algo([1,0.5,-0.5,0.01,2,0.5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "62c202aa",
+   "execution_count": 134,
+   "id": "5bbd64fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0.487941\n",
-       "dtype: float64"
+       "{'Total Return': 225529.99999999529,\n",
+       " 'Max Return': 364.9999999999977,\n",
+       " 'Min Return': -18055.000000000007}"
       ]
      },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trader.getLR()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "c1c5e83f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Total Return': 255.00000000006366,\n",
-       " 'Max Return': 29.999999999995453,\n",
-       " 'Min Return': -20.000000000004547}"
-      ]
-     },
-     "execution_count": 12,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,8 +215,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 135,
+   "id": "e3578b85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.396819\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trader.getLR()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "949f52a5",
+   "id": "04dbbbe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Initial guess for the parameters\n",
+    "initial_guess = [1,0.5,-0.5,0.01,2,0.5]\n",
+    "\n",
+    "# Perform the minimization\n",
+    "result = minimize(Algo, initial_guess)\n",
+    "\n",
+    "# Output the result\n",
+    "print(\"Optimized parameters:\", result.x)\n",
+    "print(\"Function value at optimized parameters:\", result.fun)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55674498",
    "metadata": {},
    "outputs": [],
    "source": []
