--- a/Algorithm-3.ipynb
+++ b/Algorithm-3.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "id": "66aff9a4",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "id": "56cddc5b",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "id": "819aa2e6",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "id": "1b2eee7e",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 91,
    "id": "f0975006",
    "metadata": {},
    "outputs": [],
@@ -82,12 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 126,
    "id": "661c8e2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tempData=spDaily[:10]"
+    "tempData=spDaily[10:11]"
    ]
   },
   {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 127,
    "id": "2cb85d76",
    "metadata": {},
    "outputs": [],
@@ -110,12 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 128,
    "id": "795d3c78",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Algo(data,r, a_L, a_S, E_e, stopProf, stopLoss):\n",
+    "    #data = tempData\n",
+    "   # r, a_L, a_S, E_e, stopProf, stopLoss = params\n",
     "    trader = Trader()\n",
     "    #for each day in the data\n",
     "    for d in range(len(data)):\n",
@@ -137,39 +139,30 @@
     "\n",
     "            \n",
     "            #if the acceleration is greater than or equal to acceleration constant Long\n",
-    "            if (algoTools.getAccel(t) >= a_L or algoTools.getRate(t) >= r) and trader.getLastTradePos() == 0:\n",
-    "                trader.goLong(data[d].iloc[index,:], \"A_L reached\")\n",
-    "                continue\n",
+    "            elif (algoTools.getAccel(t) >= a_L ) and trader.getLastTradePos() == 0:\n",
+    "                trader.goLong(data[d].iloc[index,:],\"A_L reached\")\n",
     "            \n",
     "            #same as previous statment but for shorting\n",
-    "            if  ( algoTools.getAccel(t) <= a_S or algoTools.getRate(t) <= -r ) and trader.getLastTradePos() == 0:\n",
+    "            elif  ( algoTools.getAccel(t) <= a_S) and trader.getLastTradePos() == 0:\n",
     "                trader.goShort(data[d].iloc[index,:],\"A_S reached\")\n",
-    "                continue\n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "           \n",
-    "            \n",
-    "            #-----Closing Conditions------\n",
-    "            \n",
-    "            \n",
-    "            #as per calclus reasoing if the first deravitive is = 0 it has found a local extrema. therfore close out \n",
-    "            #E_e is error of extrema\n",
-    "            if algoTools.getRate(t) <= E_e and trader.getLastTradePos() != 0:\n",
-    "                trader.closeOut(data[d].iloc[index,:], \"E_e reached\")\n",
-    "                continue\n",
-    "               \n",
+    "                \n",
     "            \n",
     "            #stop profit (in points)\n",
-    "            if (trader.getLastTradePos() == 1 and data[d].loc[t,\"price\"] - trader.getLastTradePrice() >= stopProf ) or (trader.getLastTradePos() == -1 and trader.getLastTradePrice() - data[d].loc[t,\"price\"] >= stopProf):\n",
-    "                trader.closeOut(data[d].iloc[index,:],\"Stop Prof Reached\")\n",
-    "                continue\n",
+    "            elif (trader.getLastTradePos() == 1 and data[d].loc[t,\"price\"] - trader.getLastTradePrice() >= stopProf ) or (trader.getLastTradePos() == -1 and trader.getLastTradePrice() - data[d].loc[t,\"price\"] >= stopProf):\n",
+    "                trader.closeOut(data[d].iloc[index,:],\"Stop Prof reached\")\n",
+    "                \n",
     "            \n",
     "            #stop loss (in points)\n",
-    "            if (trader.getLastTradePos() == 1 and data[d].loc[t,\"price\"] - trader.getLastTradePrice() <= stopLoss) or (trader.getLastTradePos() == -1 and trader.getLastTradePrice() - data[d].loc[t,\"price\"] <= stopLoss ):\n",
-    "                trader.closeOut(data[d].iloc[index,:],\"Stop Loss Reached\")\n",
-    "                continue\n",
+    "            elif trader.getLastTradePos() == 1 and (trader.getLastTradePrice()-data[d].loc[t,\"price\"] ) >= stopLoss:\n",
+    "                trader.closeOut(data[d].iloc[index,:],\"Stop Loss reached L\")\n",
+    "                \n",
+    "                \n",
+    "            elif trader.getLastTradePos() == -1 and (data[d].loc[t,\"price\"]-trader.getLastTradePrice()) >= stopLoss:\n",
+    "                trader.closeOut(data[d].iloc[index,:],\"Stop Loss reached S\")\n",
+    "                \n",
+    "\n",
+    "\n",
+    "            \n",
     "                \n",
     "            \n",
     "            \n",
@@ -180,29 +173,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 129,
    "id": "e7e5ba8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trader = Algo(tempData,1,0.5,-0.5,0.01,2,0.5)"
+    "trader = Algo(tempData,0.9,0.5,-0.5,0.01,2,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "809e4c5a",
+   "execution_count": 130,
+   "id": "97a0de69",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Total Return': -1140.0000000001,\n",
-       " 'Max Return': 285.0000000000023,\n",
-       " 'Min Return': -305.0000000000068}"
+       "{'Total Return': -114.99999999999773, 'Max Return': 100.0, 'Min Return': -50.0}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,18 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 131,
    "id": "692990da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0.448905\n",
+       "0    0.675676\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 125,
    "id": "533febe8",
    "metadata": {},
    "outputs": [
@@ -269,38 +260,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1219.8</td>\n",
-       "      <td>2005-08-23 15:30:00</td>\n",
-       "      <td>A_S reached</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1252.6</td>\n",
+       "      <td>2008-07-28 03:30:05</td>\n",
+       "      <td>A_L reached</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>1219.8</td>\n",
-       "      <td>2005-08-23 15:30:00</td>\n",
-       "      <td>E_e reached</td>\n",
+       "      <td>1251.6</td>\n",
+       "      <td>2008-07-28 04:34:59</td>\n",
+       "      <td>Stop Loss reached L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1221.3</td>\n",
-       "      <td>2005-08-23 15:30:00</td>\n",
-       "      <td>A_L reached</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1252.1</td>\n",
+       "      <td>2008-07-28 06:21:30</td>\n",
+       "      <td>A_S reached</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>1221.3</td>\n",
-       "      <td>2005-08-23 15:30:00</td>\n",
-       "      <td>E_e reached</td>\n",
+       "      <td>1253.4</td>\n",
+       "      <td>2008-07-28 06:21:40</td>\n",
+       "      <td>Stop Loss reached S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1220.4</td>\n",
-       "      <td>2005-08-23 17:00:00</td>\n",
-       "      <td>A_S reached</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1253.9</td>\n",
+       "      <td>2008-07-28 06:36:13</td>\n",
+       "      <td>A_L reached</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -310,91 +301,69 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2059</th>\n",
+       "      <th>509</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>1176.6</td>\n",
-       "      <td>2010-10-14 07:30:03</td>\n",
-       "      <td>E_e reached</td>\n",
+       "      <td>1158.2</td>\n",
+       "      <td>2010-10-06 06:36:12</td>\n",
+       "      <td>Stop Loss reached S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2060</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1175.3</td>\n",
-       "      <td>2010-10-14 07:30:11</td>\n",
-       "      <td>A_L reached</td>\n",
+       "      <th>510</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1157.6</td>\n",
+       "      <td>2010-10-06 07:15:00</td>\n",
+       "      <td>A_S reached</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2061</th>\n",
+       "      <th>511</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>1175.2</td>\n",
-       "      <td>2010-10-14 07:30:11</td>\n",
-       "      <td>E_e reached</td>\n",
+       "      <td>1155.6</td>\n",
+       "      <td>2010-10-06 07:16:20</td>\n",
+       "      <td>Stop Prof reached</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2062</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1176.2</td>\n",
-       "      <td>2010-10-14 07:30:23</td>\n",
-       "      <td>A_L reached</td>\n",
+       "      <th>512</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1156.0</td>\n",
+       "      <td>2010-10-06 08:30:25</td>\n",
+       "      <td>A_S reached</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2063</th>\n",
+       "      <th>513</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>1176.2</td>\n",
-       "      <td>2010-10-14 07:30:23</td>\n",
-       "      <td>E_e reached</td>\n",
+       "      <td>1157.0</td>\n",
+       "      <td>2010-10-06 08:34:01</td>\n",
+       "      <td>Stop Loss reached S</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2064 rows × 4 columns</p>\n",
+       "<p>514 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Position  TradePrice           TradeTime       Method\n",
-       "0         -1.0      1219.8 2005-08-23 15:30:00  A_S reached\n",
-       "1          0.0      1219.8 2005-08-23 15:30:00  E_e reached\n",
-       "2          1.0      1221.3 2005-08-23 15:30:00  A_L reached\n",
-       "3          0.0      1221.3 2005-08-23 15:30:00  E_e reached\n",
-       "4         -1.0      1220.4 2005-08-23 17:00:00  A_S reached\n",
-       "...        ...         ...                 ...          ...\n",
-       "2059       0.0      1176.6 2010-10-14 07:30:03  E_e reached\n",
-       "2060       1.0      1175.3 2010-10-14 07:30:11  A_L reached\n",
-       "2061       0.0      1175.2 2010-10-14 07:30:11  E_e reached\n",
-       "2062       1.0      1176.2 2010-10-14 07:30:23  A_L reached\n",
-       "2063       0.0      1176.2 2010-10-14 07:30:23  E_e reached\n",
+       "     Position  TradePrice           TradeTime               Method\n",
+       "0         1.0      1252.6 2008-07-28 03:30:05          A_L reached\n",
+       "1         0.0      1251.6 2008-07-28 04:34:59  Stop Loss reached L\n",
+       "2        -1.0      1252.1 2008-07-28 06:21:30          A_S reached\n",
+       "3         0.0      1253.4 2008-07-28 06:21:40  Stop Loss reached S\n",
+       "4         1.0      1253.9 2008-07-28 06:36:13          A_L reached\n",
+       "..        ...         ...                 ...                  ...\n",
+       "509       0.0      1158.2 2010-10-06 06:36:12  Stop Loss reached S\n",
+       "510      -1.0      1157.6 2010-10-06 07:15:00          A_S reached\n",
+       "511       0.0      1155.6 2010-10-06 07:16:20    Stop Prof reached\n",
+       "512      -1.0      1156.0 2010-10-06 08:30:25          A_S reached\n",
+       "513       0.0      1157.0 2010-10-06 08:34:01  Stop Loss reached S\n",
        "\n",
-       "[2064 rows x 4 columns]"
+       "[514 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "trader.getTradeData()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55254bff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.optimize import minimize\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Initial guess for the parameters\n",
-    "initial_guess = [1,0.5,-0.5,0.01,2,0.5]\n",
-    "\n",
-    "# Perform the minimization\n",
-    "result = minimize(Algo, initial_guess)\n",
-    "\n",
-    "# Output the result\n",
-    "print(\"Optimized parameters:\", result.x)\n",
-    "print(\"Function value at optimized parameters:\", result.fun)"
    ]
   },
   {
